--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,7 @@
-altgraph==0.17.4
-auto-py-to-exe==2.48.1
-blinker==1.9.0
-bottle==0.13.4
-bottle-websocket==0.2.9
-cairocffi==1.7.1
-CairoSVG==2.8.2
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.2
-chess==1.11.2
-click==8.2.1
-cligame==0.2.2
-colorama==0.4.6
-cssselect2==0.8.0
-defusedxml==0.7.1
-distlib==0.3.9
-dominoes==6.1.0
-Eel==0.18.2
-et_xmlfile==2.0.0
-filelock==3.18.0
-Flask==3.1.1
-flask-cors==6.0.2
-Flask-Login==0.6.3
-fsspec==2026.2.0
-future==1.0.0
-gevent==25.9.1
-gevent-websocket==0.10.1
-greenlet==3.3.1
-gunicorn==25.1.0
-idna==3.10
-importlib_resources==6.5.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-mpmath==1.3.0
-networkx==3.6.1
-numpy==2.3.1
-openpyxl==3.1.5
-packaging==25.0
-pandas==3.0.0
-pefile==2023.2.7
-pillow==11.3.0
-platformdirs==4.3.8
-pycparser==2.22
-pyfiglet==1.0.3
-pygame==2.6.1
-pyinstaller==6.15.0
-pyinstaller-hooks-contrib==2025.8
-pyparsing==3.3.2
-python-chess==1.999
-python-dateutil==2.9.0.post0
-pywin32-ctypes==0.2.3
-qrcode==8.2
-requests==2.32.4
-schedule==1.2.2
-setuptools==80.9.0
-six==1.17.0
-stockfish==3.28.0
-sympy==1.14.0
-termcolor==3.1.0
-tinycss2==1.4.0
-torch==2.10.0
-typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.5.0
-virtualenv==20.31.2
-webencodings==0.5.1
-Werkzeug==3.1.3
-zope.event==6.1
-zope.interface==8.2
+Flask
+Flask-CORS
+pandas
+openpyxl
+qrcode[pil]
+Pillow
+gunicorn
